src/objects/dyfr__Dependent_value__c.object
<CustomObject>
    <fields>
        <fullName>dyfr__Field_Config__c</fullName>
        <label>Field configuration</label>
        <referenceTo>dyfr__Field_Config__c</referenceTo>
        <relationshipLabel>Dependent values</relationshipLabel>
        <relationshipName>Dependent_values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dyfr__List_Value_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>List Value Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dyfr__LoV_labels__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LoV labels</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dyfr__LoV_values__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LoV values</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dyfr__Values_control_value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Values control value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>List value</label>
    <nameField>
        <displayFormat>LV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>